Detach ::first-letter in Element::DetachLayoutTree.

The code for first-letter was recently reworked, but this was overlooked.

Fixes DCHECK failures for LayoutNG.

R=futhark@chromium.org, yosin@chromium.org

Bug: 872207
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I03e7aa3216c3e6c9e8576ff2d76cdb20730a9aae
Reviewed-on: https://chromium-review.googlesource.com/1166921
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Anders Ruud <andruud@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581813}
Former-commit-id: 18b2fbc6797c30140e1d7e9988459a426ec4f31e